Fixed clear button spacing.

--- a/style.css
+++ b/style.css
@@ -19,6 +19,3 @@ a{
 table button{
     margin: 0 2%;
 }
-#clear{
-    margin: 2% 0%;
-}
